[package]
name = "cursive-multiple-choice-view"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mastercaution/cursive-multiple-choice-view.git"
keywords = ["cursive", "cursive-views", "TUI"]
categories = ["command-line-interface", "gui"]
description = "Multiple choice view for Cursive"

[dependencies]
cursive_core = "0.4"

[dev-dependencies]
cursive = "0.21.1"
